kubernetes/celery_worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-deployment
  labels:
    app: celery-worker
spec:
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      name: neatplus-celery-worker-pod
      labels:
        app: celery-worker
    spec:
      containers:
      - name: neatplus-container
        image: ghcr.io/neatplus/server:latest
