kubernetes/server_service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
